Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp
@@ -267,6 +267,7 @@ Page* WebChromeClient::createWindow(Frame& frame, const WindowFeatures& windowFe
     navigationActionData.canHandleRequest = m_page.canHandleRequest(navigationAction.resourceRequest());
     navigationActionData.shouldOpenExternalURLsPolicy = navigationAction.shouldOpenExternalURLsPolicy();
     navigationActionData.downloadAttribute = navigationAction.downloadAttribute();
+    navigationActionData.adClickAttribution = navigationAction.adClickAttribution();
 
     WebFrame* webFrame = WebFrame::fromCoreFrame(frame);
 
